[package]
name = "tower-oss"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.8", features = ["attributes"] }
serde = { version = "1", features = ["derive"] }
femme = "2"
serde_json = "1"
anyhow = "1"
thiserror = "1"
toml = "0.5"
tide = "0.16"